Fix layout issues

--- a/pdfcheck.css
+++ b/pdfcheck.css
@@ -43,8 +43,14 @@ label {
 }
 
 .attribute {
-  display: inline-block;
+  display: block;
   width: 12em;
+  float: left;
+}
+
+.result {
+  display: block;
+  margin-left: 12em;
 }
 
 .file-number {
@@ -58,6 +64,25 @@ label {
 .success {
   padding: .5em 1em;
   margin: .25em 0;
+}
+
+.default:before,
+.default:after,
+.failure:before,
+.failure:after,
+.warning:before,
+.warning:after,
+.success:before,
+.success:after {
+  content: ' ';
+  display: table;
+}
+
+.default:after,
+.failure:after,
+.warning:after,
+.success:after {
+  clear: both;
 }
 
 .default {
@@ -122,7 +147,7 @@ label {
 }
 
 .help {
-  padding-top: 10em;
+  padding: 10em 2em 2em 2em;
 }
 
 .more-info {
